--- a/zshrc.d/plugins/tmux/tmux.only.conf
+++ b/zshrc.d/plugins/tmux/tmux.only.conf
@@ -1,1 +1,3 @@
 set -g default-terminal $ZSH_TMUX_TERM
+
+source /home/asmodai/.local/lib/python3.10/site-packages/powerline/bindings/tmux/powerline.conf
