--- a/zshrc.d/plugins/tmux/tmux.only.conf
+++ b/zshrc.d/plugins/tmux/tmux.only.conf
@@ -1,3 +1,5 @@
 set -g default-terminal $ZSH_TMUX_TERM
+set -g mouse on
+set -g mouse-select-pane on
 
 source /home/asmodai/.local/lib/python3.10/site-packages/powerline/bindings/tmux/powerline.conf
