Update irssi theme.

--- a/irssi/config
+++ b/irssi/config
@@ -149,17 +149,17 @@ statusbar = {
     topicbarend = "{topicsbend}";
 
     # treated "normally", you could change the time/user name to whatever
-    time = "{sb $Z}";
+    time = "{sb $Z} {sbaway $A} $topic";
     user = "%5{sb {sbnickmode %k$[-2]cumode}%W%_$N%_ %k {sbumode %k$usermode} %0%m{sbaway $A}}%5";
 
     # treated specially .. window is printed with non-empty windows,
     # window_empty is printed with empty windows
-    window = "%0 {sb $tag/{channel $itemname} %C {sbmode $M}} %C%n ";
+    window = "%0 {sb $tag/{channel $itemname}%0 %M {sbmode $M}} %M%n ";
     window_empty = "%0{sb {sbservertag $tag}}";
     prompt = "{prompt $[.15]itemname}";
     prompt_empty = "{prompt $winname}";
 
-    topic = " $topic";
+    topic = "%W%5 {sb $Z}  %z313131%m%W$topic";
     topic_empty = " Irssi v$J - http://www.irssi.org";
 
     # all of these treated specially, they're only displayed when needed
@@ -241,7 +241,7 @@ statusbar = {
 
       type = "root";
       placement = "top";
-      position = "1";
+      position = "2";
       visible = "always";
 
       items = {
@@ -250,6 +250,7 @@ statusbar = {
         topic = { };
         topicempty = { };
       };
+      disabled = "no";
     };
     awl_0 = {
       items = {
@@ -265,7 +266,7 @@ settings = {
     real_name = "Paul";
     user_name = "asmodai";
     nick = "Asmodai";
-    timestamp_format = "%H:%M│%d/%m";
+    timestamp_format = "%H:%M %d/%m";
   };
   "fe-text" = { actlist_sort = "refnum"; indent = "28"; };
   "fe-common/core" = { theme = "mine"; awaylog_colors = "no"; };
