--- a/X11/themes/kde/aurorae/Mine/metadata.desktop
+++ b/X11/themes/kde/aurorae/Mine/metadata.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Name=Mine
+Name=My Aurorae
 X-KDE-PluginInfo-Author=Paul Ward
 X-KDE-PluginInfo-Category=
 X-KDE-PluginInfo-Depends=
@@ -7,4 +7,4 @@ X-KDE-PluginInfo-Email=asmodai@gmail.com
 X-KDE-PluginInfo-EnabledByDefault=true
 X-KDE-PluginInfo-License=GPLv3
 X-KDE-PluginInfo-Name=Mine
-X-KDE-PluginInfo-Version=1.0.0
+X-KDE-PluginInfo-Version=1.0.1
