Move to Breeze.
Look, I'll be honest here.  The switch from Plasma 5 to Plasma 6 has
broken a lot of what I "borrowed" from Sweet and the Garuda
customisations.

I feel that it will be simpler to just use Breeze.  Those are the
blessed themes, so when Plasma 7 lands, I can just re-apply the hacks
and have everything working.

--- a/X11/themes/kde/plasma/look-and-feel/plasma5/MyBreeze/metadata.desktop
+++ b/X11/themes/kde/plasma/look-and-feel/plasma5/MyBreeze/metadata.desktop
@@ -1,9 +1,9 @@
 [Desktop Entry]
-Comment=MySplash
+Comment=MyBreeze
 
 Encoding=UTF-8
 Keywords=Desktop;Workspace;Appearance;Look and Feel;Logout;Lock;Suspend;Shutdown;Hibernate;
-Name=MySplash
+Name=MyBreeze
 
 Type=Service
 
@@ -13,7 +13,6 @@ X-KDE-PluginInfo-Author=Asmodai
 X-KDE-PluginInfo-Category=
 X-KDE-PluginInfo-Email=asmodai@gmail.com
 X-KDE-PluginInfo-License=GPLv3
-X-KDE-PluginInfo-Name=MySplash
+X-KDE-PluginInfo-Name=MyBreeze
 X-KDE-PluginInfo-Version=1.0
 X-Plasma-MainScript=defaults
-
