--- a/X11/themes/kde/sddm/plasma5/mine/metadata.desktop
+++ b/X11/themes/kde/sddm/plasma5/mine/metadata.desktop
@@ -1,12 +1,8 @@
 [SddmGreeterTheme]
-Name=Mine
-Name[en_GB]=Mine
-Name[x-test]=xxMinexx
-Description=Mine
-Description[en_GB]=Mine
-Description[x-test]=xxMinexx
+Name=My Breeze
+Description=Breeze Theme using my desktop
 Author=Paul Ward
-Copyright=(c) 2014, Paul Ward
+Copyright=(c) 2025, Paul Ward.
 License=CC-BY-SA
 Type=sddm-theme
 Version=0.1
@@ -15,6 +11,6 @@ Screenshot=preview.png
 MainScript=Main.qml
 ConfigFile=theme.conf
 TranslationsDirectory=translations
-Email=asmodai@gmail.com
-Theme-Id=mine
+Email=Paul Ward <paul@lisphacker.uk>
+Theme-Id=my-breeze
 Theme-API=2.0
