--- a/X11/themes/kde/sddm/plasma5/mine/theme.conf
+++ b/X11/themes/kde/sddm/plasma5/mine/theme.conf
@@ -4,5 +4,5 @@ logo=/usr/share/sddm/themes/breeze/default-logo.svg
 type=image
 color=#1d99f3
 fontSize=10
-background=/usr/share/wallpapers/Mine/contents/images/2560x1440.jpg
+background="PurpleAbstractDark.png"
 needsFullUserModel=false
