--- a/X11/themes/kde/plasma/look-and-feel/plasma5/MyBreeze/metadata.desktop
+++ b/X11/themes/kde/plasma/look-and-feel/plasma5/MyBreeze/metadata.desktop
@@ -1,6 +1,5 @@
 [Desktop Entry]
-Comment=MyBreeze
-
+Comment=Breeze theme with my custom background image
 Encoding=UTF-8
 Keywords=Desktop;Workspace;Appearance;Look and Feel;Logout;Lock;Suspend;Shutdown;Hibernate;
 Name=MyBreeze
