Migration from Powerline to Starship.

--- a/.gitignore
+++ b/.gitignore
@@ -2,16 +2,14 @@
 *~
 *.tmp
 .DS_Store
+
+# ZSH stuff we don't want to track.
 zshrc.d/cache
+
+# X11 stuff we don't want to track.
 X11/themes/gtk/MyDark/.sass-cache
 X11/fvwm/.XDGMenu
 X11/fvwm/icons
 X11/fvwm/.FvwmConsole-History
 X11/fvwm/fvwm_mfl_:0.pid
 
-# Emacs trash
-emacs/cache/
-emacs/eln-cache/
-emacs/elpa/
-emacs/var/
-emacs/custom.el
