--- a/starship/starship-16.toml
+++ b/starship/starship-16.toml
@@ -153,7 +153,7 @@ format      = '[ $user ]($style)[]($style inverted fg:timebg)'
 # Hostname block.
 [hostname]
 format   = "[ 🖧 ]($style)[$hostname]($style bold)"
-ssh_only = false
+ssh_only = true
 trim_at  = "."
 disabled = false
 style    = "bg:black fg:hostfg"
